deploy/jenkins/jenkins-deployment.yaml
#-------------Jenkins Deployment 部署jenkins配置--------------#
kind: Deployment
apiVersion: apps/v1beta2
metadata:
  name: jenkins
  namespace: default
  labels:
    k8s-app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: jenkins
  template:
    metadata:
      labels:
        k8s-app: jenkins
    spec:
      containers:
      - name: jenkins
        image: dengyc/jenkins
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        - containerPort: 50000
        volumeMounts:
        - name: jenkinshome
          mountPath: /var/jenkins_home
        - name: docker
          mountPath: /bin/docker
        - name: dockersock
          mountPath: /var/run/docker.sock    
      volumes:
      - name: jenkinshome
        nfs:
          server: 192.168.31.240
          path: "/data/jenkins_home"
      - name: docker
        hostPath:
          path: "/usr/bin/docker"
      - name: dockersock
        hostPath:
          path: "/var/run/docker.sock"
      serviceAccount: "jenkins-admin"

---
#-------------Jenkins Service 部署jenkins服务--------------#

kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: jenkins
  name: jenkins
  namespace: default
  annotations:
    prometheus.io/scrape: 'true'
spec:
  ports:
    - port: 8080
      name: jenkins
      targetPort: 8080
    - port: 50000
      name: jenkins-agent
      nodePort: 50000
      targetPort: 50000
  type: NodePort
  selector:
    k8s-app: jenkins

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: default
spec:
  rules:
  - host: jenkins.sparxotest.com	
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
